--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 <body>
 
   <div class="container_all">
+
+      <!-- HEADER -->
     <header class="nav_bar">
       <div class="logo_navbar">
         <img src="https://naturaldemo.files.wordpress.com/2016/07/natural-logo.png" alt="">
@@ -28,13 +30,55 @@
         <li>contacts</li>
       </ul>
     </div>
+      <!-- / HEADER -->
+      <!-- LEFT COLUMN -->
+    <div class="left_col clearfix">
+      <h2><i class="fas fa-rss-square"></i> Oraginc Themes</h2>
+      <ul>
+        <li><a href="#">How to pick a word press theme 2019</a></li>
+        <li><a href="#">How to pick a word press theme 2019</a></li>
+        <li><a href="#">How to pick a word press theme 2019</a></li>
+        <li><a href="#">How to pick a word press theme 2019</a></li>
+        <li><a href="#">How to pick a word press theme 2019</a></li>
+      </ul>
+    </div>
+      <!-- / LEFT COLUMN -->
+      <!-- MIDDLE COLUMN -->
+    <div class="middle_col clearfix">
+      <h2>THREE COLUMN</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    </div>
+      <!-- / MIDDLE COLUMN -->
+      <!-- THIRD COLUMN -->
+    <div class="right_col clearfix">
 
+      <div class="first_widget bg_white">
+        <h2>Text Widget</h2>
+        <p>This is an example of a text widget. You could write a brief introduction to your site, add links, images,video,HTML and more using text widget. Its pretty handy!</p>
+      </div>
+      <div class="second_widget bg_white">
+        <h2>Text Widget</h2>
+        <p>This is an example of a text widget. You could write a brief introduction to your site, add links, images,video,HTML and more using text widget. Its pretty handy!</p>
+      </div>
+      <div class="third_widget bg_white">
+        <h2>Text Widget</h2>
+        <p>This is an example of a text widget. You could write a brief introduction to your site, add links, images,video,HTML and more using text widget. Its pretty handy!</p>
+      </div>
 
-
-
-
-
-
+    </div>
+    <!-- / THIRD COLUMN -->
+    <!-- FOOTER  -->
+    <footer class="clearfix">
+      <div class="up_footer">
+        <p><em>Pagina realizzata da Nicola Rizzi</em></p>
+      </div>
+      <div class="footer_icons">
+        <i class="fab fa-facebook-square"></i>
+        <i class="fab fa-instagram"></i>
+        <i class="fab fa-github"></i>
+      </div>
+    </footer>
+    <!-- / FOOTER  -->
 
 
 
