--- a/index.html
+++ b/index.html
@@ -9,9 +9,6 @@
   <title>Struttura Word Press</title>
 </head>
 <body>
-
-  <div class="container_all">
-
       <!-- HEADER -->
     <header class="nav_bar">
       <div class="logo_navbar">
@@ -21,34 +18,37 @@
     </header>
     <div class="navigation_links">
       <ul>
-        <li>home</li>
-        <li>about</li>
-        <li>page template</li>
-        <li>a parent page</li>
-        <li>fetures</li>
-        <li>blog</li>
-        <li>contacts</li>
+        <li><a href="#"> home </a></li>
+        <li><a href="#"> about </a></li>
+        <li><a href="#"> page template </a></li>
+        <li><a href="#"> a parent page </a></li>
+        <li><a href="#"> fetures </a></li>
+        <li><a href="#"> blog </a></li>
+        <li><a href="#"> contacts </a></li>
       </ul>
     </div>
       <!-- / HEADER -->
+
       <!-- LEFT COLUMN -->
     <div class="left_col clearfix">
       <h2><i class="fas fa-rss-square"></i> Oraginc Themes</h2>
       <ul>
         <li><a href="#">How to pick a word press theme 2019</a></li>
-        <li><a href="#">How to pick a word press theme 2019</a></li>
-        <li><a href="#">How to pick a word press theme 2019</a></li>
-        <li><a href="#">How to pick a word press theme 2019</a></li>
-        <li><a href="#">How to pick a word press theme 2019</a></li>
+        <li><a href="#">The updated Guenberg portfolio Theme</a></li>
+        <li><a href="#">Black Friday Through Cyber Monday Deal For WordPress Website Owners</a></li>
+        <li><a href="#">The ultimate guide to optimazing your wordpress theme for gutenberg</a></li>
+        <li><a href="#">A better wordpress page builder - organig Buildder widgets pro</a></li>
       </ul>
     </div>
       <!-- / LEFT COLUMN -->
+
       <!-- MIDDLE COLUMN -->
     <div class="middle_col clearfix">
       <h2>THREE COLUMN</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     </div>
       <!-- / MIDDLE COLUMN -->
+
       <!-- THIRD COLUMN -->
     <div class="right_col clearfix">
 
@@ -67,24 +67,20 @@
 
     </div>
     <!-- / THIRD COLUMN -->
+
     <!-- FOOTER  -->
     <footer class="clearfix">
       <div class="up_footer">
         <p><em>Pagina realizzata da Nicola Rizzi</em></p>
       </div>
       <div class="footer_icons">
-        <i class="fab fa-facebook-square"></i>
-        <i class="fab fa-instagram"></i>
-        <i class="fab fa-github"></i>
+        <a href="#"><i class="fab fa-facebook-square"></i></a>
+        <a href="#"><i class="fab fa-instagram"></i></a>
+        <a href="#"><i class="fab fa-github"></i></a>
       </div>
     </footer>
     <!-- / FOOTER  -->
 
 
-
-
-
-
-  </div>
 </body>
 </html>
